crates/biome_cli/tests/snapshots/main_commands_migrate_stylelint/migrate_stylelint_ignore_files_with_existing_includes.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate stylelint --write
```

## `biome.json`

```json
{
  "linter": {
    "rules": { "preset": "none", "suspicious": { "noEmptyBlock": "error" } },
    "includes": ["src/**", "**", "!dist/**"]
  }
}
```

## `.stylelintrc.json`

```json
{
        "rules": { "block-no-empty": true },
        "ignoreFiles": ["dist/**"]
    }
```

# Emitted Messages

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 1 Stylelint rules found
    - 1 have been migrated to Biome's rules
    - 100% (1) of your Stylelint rules are fully covered by Biome
      - 100% (1) via direct migration to Biome rules
  
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration successfully migrated.
  

```
