crates/biome_cli/tests/snapshots/main_commands_migrate_stylelint/migrate_stylelintrcjson_not_found.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate stylelint
```

## `biome.json`

```json
{ "linter": { "enabled": true } }
```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: The default Stylelint configuration file `.stylelintrc[.*]` was not found in the working directory.
  


```
