crates/biome_cli/tests/snapshots/main_commands_migrate_stylelint/migrate_stylelintrcjson_overrides_disabled.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate stylelint --write
```

## `biome.json`

```json
{
  "linter": {
    "enabled": true,
    "rules": { "preset": "none", "suspicious": { "noEmptyBlock": "error" } }
  },
  "overrides": [
    {
      "includes": ["*.scss"],
      "linter": { "rules": { "suspicious": { "noEmptyBlock": "off" } } }
    }
  ]
}
```

## `.stylelintrc.json`

```json
{
        "rules": {
            "block-no-empty": true
        },
        "overrides": [
            {
                "files": ["*.scss"],
                "rules": {
                    "block-no-empty": null
                }
            }
        ]
    }
```

# Emitted Messages

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 1 Stylelint rules found
    - 1 have been migrated to Biome's rules
    - 100% (1) of your Stylelint rules are fully covered by Biome
      - 100% (1) via direct migration to Biome rules
  
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration successfully migrated.
  

```
