crates/biome_cli/tests/snapshots/main_commands_migrate_stylelint/migrate_stylelintrcyaml_unsupported.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate stylelint
```

## `biome.json`

```json
{ "linter": { "enabled": true } }
```

## `.stylelintrc.yaml`

```yaml
rules:
  block-no-empty: true

```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: Stylelint configuration ending with the extension `yaml` are not supported.
  


```
